fix: fix double border while both variables and testing panels are open
Closes https://github.com/camunda/camunda-modeler/issues/5730

--- a/client/src/app/tabs/cloud-bpmn/side-panel/tabs/task-testing/TaskTestingTab.less
+++ b/client/src/app/tabs/cloud-bpmn/side-panel/tabs/task-testing/TaskTestingTab.less
@@ -1,5 +1,6 @@
 :local(.TaskTestingTab) {
   height: 100%;
+  background: var(--color-white);
 
   .code__editor * {
     user-select: text;
